# src/js/api/urls.js
@@ -142,6 +142,14 @@ export const BUDGET_CODE_BY_ID = (id) => `${BUDGET_CODE_API}/${id}`;
 
 // PRODUCT GROUP
 export const PRODUCT_GROUP_OPTION = `${API}/productGroupOptions`;
+export const PRODUCT_GROUP_API = `${API}/productGroups`;
+export const PRODUCT_GROUP_BY_ID = (id) => `${PRODUCT_GROUP_API}/${id}`;
+export const PRODUCT_GROUP_PRODUCTS = (id) => `${PRODUCT_GROUP_API}/${id}/products`;
+export const PRODUCT_GROUP_PRODUCT_BY_ID = (id, productId) => `${PRODUCT_GROUP_PRODUCTS(id)}/${productId}`;
+export const PRODUCT_TYPE_API = `${API}/productTypes`;
+export const PRODUCT_TYPE_BY_ID = (id) => `${PRODUCT_TYPE_API}/${id}`;
+export const PRODUCT_ACTIVITY_CODE_OPTIONS = `${API}/productActivityCodeOptions`;
+export const PRODUCT_FIELD_OPTIONS = `${API}/productFieldOptions`;
 
 // SHIPMENT TYPES
 export const SHIPMENT_TYPES = `${GENERIC_API}/shipmentType`;
@@ -221,6 +229,7 @@ export const PRODUCT_SUPPLIER_BY_ID = (id) => `${PRODUCT_SUPPLIER_API}/${id}`;
 export const PRODUCT_SUPPLIER_PREFERENCES_API = `${API}/productSupplierPreferences`;
 export const PRODUCT_SUPPLIER_PREFERENCES_BY_ID = (id) => `${PRODUCT_SUPPLIER_PREFERENCES_API}/${id}`;
 export const PRODUCT_SUPPLIER_EXPORT = `${PRODUCT_SUPPLIER_API}/export`;
+export const PRODUCT_SUPPLIER_DETAILS = (id) => `${PRODUCT_SUPPLIER_API}/${id}/details`;
 
 // UNIT OF MEASURE
 export const UNIT_OF_MEASURE_API = `${API}/unitOfMeasures`;
